--- a/Guide/index.html
+++ b/Guide/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>vWoofswap - User Guide</title>
+    <title>Feedswap - User Guide</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -96,32 +96,32 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">vWoofswap - User Guide</div>
+        <div class="header">Feedswap - User Guide</div>
         
         <div class="section">
-            <h2>Welcome to vWoofswap!</h2>
-            <p>vWoofswap is a decentralized application (DApp) on the Shibarium network, allowing you to wrap WOOF tokens, deploy Meme coins, add liquidity, and manage your tokens with ease. Connect your MetaMask wallet to get started!</p>
+            <h2>Welcome to Feedswap!</h2>
+            <p>Feedswap is a decentralized application (DApp) on the Shibarium network, allowing you to wrap FEED tokens, deploy Meme coins, add liquidity, and manage your tokens with ease. Connect your MetaMask wallet to get started!</p>
         </div>
 
         <div class="section">
             <h2>Core Features</h2>
             <ul>
-                <li><strong>Deposit WOOF for wWOOF</strong>: Deposit WOOF tokens to receive wrapped wWOOF tokens.</li>
-                <li><strong>Withdraw wWOOF for WOOF</strong>: Withdraw wWOOF tokens to reclaim your WOOF tokens.</li>
+                <li><strong>Deposit FEED for WFEED</strong>: Deposit FEED tokens to receive wrapped WFEED tokens.</li>
+                <li><strong>Withdraw WFEED for FEED</strong>: Withdraw WFEED tokens to reclaim your FEED tokens.</li>
                 <li><strong>Deploy Meme Coin</strong>: Create your own Meme coin by specifying a name and symbol.</li>
-                <li><strong>Add Liquidity</strong>: Add liquidity to a Meme coin pool using 1,000,000 wWOOF and 1,000,000,000,000,000 Meme coins.</li>
+                <li><strong>Add Liquidity</strong>: Add liquidity to a Meme coin pool using 1,000,000 WFEED and 1,000,000,000,000,000 Meme coins.</li>
                 <li><strong>View Recent Meme Coins</strong>: Check up to 20 recently deployed Meme coins, including their addresses (click to copy) and liquidity status.</li>
             </ul>
         </div>
 
         <div class="section">
             <h2>How to Use</h2>
-            <p>Follow these steps to use vWoofswap:</p>
+            <p>Follow these steps to use Feedswap:</p>
             <ul>
                 <li>Connect your MetaMask wallet to the Shibarium network (Chain ID: 109).</li>
-                <li>Ensure you have enough WOOF tokens for deposits and wWOOF for liquidity.</li>
-                <li>Use the "Deposit" section to wrap WOOF into wWOOF (first deposit auto-approves max allowance).</li>
-                <li>Use the "Withdraw" section to unwrap wWOOF back to WOOF.</li>
+                <li>Ensure you have enough FEED tokens for deposits and WFEED for liquidity.</li>
+                <li>Use the "Deposit" section to wrap FEED into WFEED (first deposit auto-approves max allowance).</li>
+                <li>Use the "Withdraw" section to unwrap WFEED back to FEED.</li>
                 <li>Deploy a Meme coin by entering a name and symbol in the "Deploy Meme Coin" section.</li>
                 <li>Add liquidity by entering a Meme coin address in the "Add Liquidity" section.</li>
                 <li>View your recently deployed Meme coins in the "Recent Meme Coins" section. Click the address to copy it to your clipboard.</li>
@@ -132,16 +132,16 @@
             <h2>Important Notes</h2>
             <ul>
                 <li>Ensure you have enough BONE for gas fees on Shibarium.</li>
-                <li>WOOF address: 0xD0daa7B6ff1B40d3cc6F0B2Cf7E85cB993D1c834</li>
-                <li>wWOOF address: 0x740765a5B46A1c47b63Dd3b16CA8c7ff25136E2E</li>
-                <li>vWoofswap contract: 0xfCF6183014b76e1c48762a2da53CA7642aBaf746</li>
+                <li>FEED address: 0xD0daa7B6ff1B40d3cc6F0B2Cf7E85cB993D1c834</li>
+                <li>WFEED address: 0x740765a5B46A1c47b63Dd3b16CA8c7ff25136E2E</li>
+                <li>Feedswap contract: 0xfCF6183014b76e1c48762a2da53CA7642aBaf746</li>
                 <li>Always verify contract addresses and network before interacting.</li>
             </ul>
         </div>
 
         <div class="dog-section">
-            <img src="https://www.woofswap.finance/image/tokens/shiba.gif" alt="Shiba Dog">
-            <div class="dog-message">"Woof! Ready to create and trade Meme coins, pup? Let's roll!"</div>
+            <img src="https://www.FEEDswap.finance/image/tokens/shiba.gif" alt="Shiba Dog">
+            <div class="dog-message">"FEED! Ready to create and trade Meme coins, pup? Let's roll!"</div>
         </div>
     </div>
 </body>
