--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             </div>
         </div>
         <div class="dog-section">
-            <img src="https://www.FEEDswap.finance/image/tokens/shiba.gif" alt="Shiba Dog">
+            <img src="https://www.woofswap.finance/image/tokens/shiba.gif" alt="Shiba Dog">
             <div class="dog-message" id="dogMessage">"FEED! Connect your wallet to manage tokens, pup!"</div>
         </div>
     </div>
