--- a/Guide/index.html
+++ b/Guide/index.html
@@ -109,7 +109,7 @@
                 <li><strong>Deposit FEED for WFEED</strong>: Deposit FEED tokens to receive wrapped WFEED tokens.</li>
                 <li><strong>Withdraw WFEED for FEED</strong>: Withdraw WFEED tokens to reclaim your FEED tokens.</li>
                 <li><strong>Deploy Meme Coin</strong>: Create your own Meme coin by specifying a name and symbol.</li>
-                <li><strong>Add Liquidity</strong>: Add liquidity to a Meme coin pool using 1,000,000 WFEED and 1,000,000,000,000,000 Meme coins.</li>
+                <li><strong>Add Liquidity</strong>: Add liquidity to a Meme coin pool using 1,000,000,000,000 WFEED and 1,000,000,000,000,000 Meme coins.</li>
                 <li><strong>View Recent Meme Coins</strong>: Check up to 20 recently deployed Meme coins, including their addresses (click to copy) and liquidity status.</li>
             </ul>
         </div>
@@ -132,15 +132,15 @@
             <h2>Important Notes</h2>
             <ul>
                 <li>Ensure you have enough BONE for gas fees on Shibarium.</li>
-                <li>FEED address: 0xD0daa7B6ff1B40d3cc6F0B2Cf7E85cB993D1c834</li>
-                <li>WFEED address: 0x740765a5B46A1c47b63Dd3b16CA8c7ff25136E2E</li>
-                <li>Feedswap contract: 0xfCF6183014b76e1c48762a2da53CA7642aBaf746</li>
+                <li>FEED address: 0xe9Cb2D7ADC24Fc59FE00D6C0A0669BDF16805Fe0</li>
+                <li>WFEED address: 0x3DeB916d933DEfeb2663b60E8cA7F5f3ADE51087</li>
+                <li>Feedswap contract: 0x1bf7A95Eb58d57269D27E30D8e8e564A24E0AeFC</li>
                 <li>Always verify contract addresses and network before interacting.</li>
             </ul>
         </div>
 
         <div class="dog-section">
-            <img src="https://www.FEEDswap.finance/image/tokens/shiba.gif" alt="Shiba Dog">
+            <img src="https://www.woofswap.finance/image/tokens/shiba.gif" alt="Shiba Dog">
             <div class="dog-message">"FEED! Ready to create and trade Meme coins, pup? Let's roll!"</div>
         </div>
     </div>
