--- a/FEED/index.html
+++ b/FEED/index.html
@@ -561,18 +561,19 @@
                     <img class="token-image" src="${tokenImage}" alt="FEED">
                     <div class="token-content">
                         <h4>FEED</h4>
-                        <p class="description">FEED - A meme token on Shibarium</p>
+                        <p class="description">FEED aims to enhance Shibarium’s ecosystem by incentivizing participation and supporting SHIB’s deflationary mechanics through its unique burning process.
+FEED is a token on Shibarium, Shiba Inu's Layer 2 network, designed to burn SHIB via minting. Built on Ethereum, Shibarium boosts speed and cuts costs. FEED’s smart contract enables free minting, with BONE gas fees reducing SHIB supply, fostering scarcity and community growth.</p>
                         <div class="info">
                             <img src="https://img.icons8.com/ios-filled/16/000000/link.png" alt="Website">
-                            <a href="https://shib.club/" target="_blank">shib.club</a>
+                            <a href="https://feed.shibarium.fun/" target="_blank">shib.club</a>
                         </div>
                         <div class="info">
                             <img src="https://img.icons8.com/ios-filled/16/000000/twitter.png" alt="Twitter">
-                            <a href="https://x.com/woofswap" target="_blank">@woofswap</a>
+                            <a href="https://x.com/feedcto" target="_blank">@woofswap</a>
                         </div>
                         <div class="info">
                             <img src="https://img.icons8.com/ios-filled/16/000000/telegram-app.png" alt="Telegram">
-                            <a href="https://t.me/ShibariumSRC20" target="_blank">ShibariumSRC20</a>
+                            <a href="https://t.me/feedcto" target="_blank">ShibariumSRC20</a>
                         </div>
                     </div>
                     <div class="trade-section">
