--- a/FEED/index.html
+++ b/FEED/index.html
@@ -443,7 +443,7 @@
             {"constant":true,"inputs":[{"name":"_owner","type":"address"},{"name":"_spender","type":"address"}],"name":"allowance","outputs":[{"name":"remaining","type":"uint256"}],"type":"function"}
         ];
         const shibarium = {
-            chainId": 109,
+            chainId: "0x6d",
             chainName: "Shibarium",
             nativeCurrency: { name: "BONE", symbol: "BONE", decimals: 18 },
             rpcUrls: ["https://rpc.shibrpc.com"],
@@ -457,9 +457,10 @@
         let isApproving = false;
         const defaultSlippage = 0.005;
         const maxPriceImpact = 50;
+        const maxAllowance = "115792089237316195423570985008687907853269984665640564039457584007913129639935";
 
         const dogMessages = {
-                        connectStart: ["Woof woof! Sniffing out your wallet, hold tight, human!", "Arf! Digging into Shibarium, let’s fetch that wallet!", "Bow wow! Connecting to your stash, stay pawsitive!", "Woof! I smell a wallet, let’s link it up quick!"],
+            connectStart: ["Woof woof! Sniffing out your wallet, hold tight, human!", "Arf! Digging into Shibarium, let’s fetch that wallet!", "Bow wow! Connecting to your stash, stay pawsitive!", "Woof! I smell a wallet, let’s link it up quick!"],
             connectSuccess: ["Arf arf! You’re in, pup! Time to chase some BONEs!", "Woof! Wallet’s hooked, ready to roll in Shibarium!", "Yip yip! Connected, hooman! Let’s swap some treats!", "Bow wow! Welcome aboard, let’s sniff out some swaps!"],
             connectFail: ["Grrr... Wallet slipped away, try again, hooman!", "Woof? No wallet scent detected, give it another go!", "Arf! Something barked up, retry connecting, pup!", "Ruff! Wallet’s hiding, let’s dig it out again!"],
             switchTokens: ["Woof woof! Flipping tokens like a Shib pro, huh?", "Arf! Swapping sides, let’s keep the tail wagging!", "Bow wow! Token switcheroo, you’re a clever pup!", "Ruff ruff! Mixing it up, let’s see what we fetch!"],
@@ -490,12 +491,25 @@
             return address ? `${address.slice(0, 6)}...${address.slice(-4)}` : "0x...";
         }
 
+        async function initializeWeb3() {
+            try {
+                web3 = new Web3(shibarium.rpcUrls[0]);
+                await web3.eth.getBlockNumber();
+                router = new web3.eth.Contract(routerAbi, routerAddress);
+                factory = new web3.eth.Contract(factoryAbi, factoryAddress);
+                return true;
+            } catch (error) {
+                console.warn(`Failed to initialize Web3 with RPC: ${error.message}`);
+                return false;
+            }
+        }
+
         async function connectWallet() {
             const status = document.getElementById("networkStatus");
             const connectButton = document.getElementById("connectWalletButton");
             const dogMessage = document.getElementById("dogMessage");
             try {
-                if (!window.ethereum) throw new Error("No wallet detected. Please install MetaMask.");
+                if (!window.ethereum) throw new Error("No wallet detected. Please install MetaMask or another wallet.");
                 connectButton.disabled = true;
                 status.innerText = "Connecting...";
                 dogMessage.innerText = getRandomMessage("connectStart");
@@ -511,7 +525,7 @@
                         if (switchError.code === 4902) {
                             await window.ethereum.request({ method: "wallet_addEthereumChain", params: [shibarium] });
                         } else {
-                            throw switchError;
+                            throw new Error(`Failed to switch to Shibarium: ${switchError.message}`);
                         }
                     }
                 }
@@ -522,9 +536,8 @@
                 dogMessage.innerText = getRandomMessage("connectSuccess");
                 await updateBalances();
                 updateTradeButtonState();
-                await loadToken();
             } catch (error) {
-                status.innerText = `Failed: ${error.message}`;
+                status.innerText = `Connection failed: ${error.message || "Unknown error"}`;
                 dogMessage.innerText = getRandomMessage("connectFail");
                 resetUI();
             } finally {
@@ -575,7 +588,7 @@
                     router = null;
                     factory = null;
                     resetUI();
-                    document.getElementById("networkStatus").innerText = "Wrong network. Reconnect to Shibarium.";
+                    document.getElementById("networkStatus").innerText = "Wrong network. Please reconnect to Shibarium.";
                     document.getElementById("dogMessage").innerText = "Woof! Wrong chain, pup! Switch to Shibarium!";
                 } else if (account) {
                     await connectWallet();
@@ -618,15 +631,17 @@
                 dogMessage.innerText = getRandomMessage("swapNoAmount");
                 return;
             }
-            swapInfo.innerHTML = `Calculating... <span class="spinner"></span>`;
+            swapInfo.innerText = "Calculating...";
             dogMessage.innerText = getRandomMessage("calcStart");
             try {
                 let bestOutput = web3.utils.toBN("0");
                 let routes;
+                const from = isFromBone ? wboneAddress : feedToken.address;
+                const to = isFromBone ? feedToken.address : wboneAddress;
                 for (const stable of [true, false]) {
-                    const pairAddress = await factory.methods.getPair(fromToken.address, toToken.address, stable).call();
+                    const pairAddress = await factory.methods.getPair(from, to, stable).call();
                     if (pairAddress !== "0x0000000000000000000000000000000000000000") {
-                        const tempRoutes = [{ from: fromToken.address, to: toToken.address, stable }];
+                        const tempRoutes = [{ from, to, stable }];
                         const amounts = await router.methods.getAmountsOut(amountInWei, tempRoutes).call();
                         const output = web3.utils.toBN(amounts[amounts.length - 1]);
                         if (output.gt(bestOutput)) {
@@ -646,7 +661,7 @@
                 card.dataset.routes = JSON.stringify(routes);
                 card.dataset.bestOutput = bestOutput.toString();
             } catch (error) {
-                swapInfo.innerText = "Error calculating output";
+                swapInfo.innerText = `Error calculating output: ${error.message}`;
                 dogMessage.innerText = getRandomMessage("calcFail");
             }
         }
@@ -662,15 +677,18 @@
         async function loadToken() {
             const card = document.getElementById("tokenCard");
             const dogMessage = document.getElementById("dogMessage");
+            let tokenBalance = "0";
+            let boneBalance = "0";
             try {
                 dogMessage.innerText = "Woof! Loading FEED, pup!";
-                let tokenBalance = "0";
-                let boneBalance = "0";
-                if (account) {
+                if (web3 && account) {
                     const tokenContract = new web3.eth.Contract(erc20Abi, feedToken.address);
                     tokenBalance = await tokenContract.methods.balanceOf(account).call();
                     boneBalance = await web3.eth.getBalance(account);
                 }
+            } catch (error) {
+                dogMessage.innerText = `Woof! Failed to load balances: ${error.message}`;
+            } finally {
                 card.dataset.tokenBalance = tokenBalance;
                 card.dataset.toBalance = boneBalance;
                 const boneBalanceDisplay = parseFloat(web3.utils.fromWei(boneBalance, "ether")).toFixed(2);
@@ -730,8 +748,6 @@
                 `;
                 setupCardListeners(card);
                 dogMessage.innerText = "Woof! FEED loaded, ready to swap, pup!";
-            } catch (error) {
-                dogMessage.innerText = `Woof? Failed to load FEED: ${error.message}`;
             }
         }
 
@@ -825,7 +841,7 @@
                 tradeButton.textContent = "Authorizing...";
                 tradeButton.disabled = true;
                 dogMessage.innerText = getRandomMessage("approving");
-                await tokenContract.methods.approve(routerAddress, amount).send({ from: account });
+                await tokenContract.methods.approve(routerAddress, maxAllowance).send({ from: account });
                 document.getElementById("networkStatus").innerText = "Token approved";
                 isApproving = false;
                 tradeButton.textContent = isFromBone ? "Buy" : "Sell";
@@ -970,6 +986,7 @@
                 return;
             }
             resetUI();
+            await initializeWeb3();
             setupWalletListeners();
             await loadToken();
         });
