--- a/FEED/index.html
+++ b/FEED/index.html
@@ -676,15 +676,15 @@
                     <p class="description">FEED enhances Shibarium’s ecosystem by incentivizing participation and supporting SHIB’s deflationary mechanics through its unique burning process.</p>
                     <div class="info">
                         <img src="https://img.icons8.com/ios-filled/16/000000/link.png" alt="Website">
-                        <a href="https://feed.shib.io/" target="_blank">shib.club</a>
+                        <a href="https://feed.shibarium.fun/" target="_blank">feed.shibarium.fun</a>
                     </div>
                     <div class="info">
                         <img src="https://img.icons8.com/ios-filled/16/000000/twitter.png" alt="Twitter">
-                        <a href="https://x.com/feedevery" target="_blank">@feedevery</a>
+                        <a href="https://x.com/feedcto" target="_blank">@feedcto</a>
                     </div>
                     <div class="info">
                         <img src="https://img.icons8.com/ios-filled/16/000000/telegram-app.png" alt="Telegram">
-                        <a href="https://t.me/FEED" target="_blank">FEED</a>
+                        <a href="https://t.me/feedcto" target="_blank">@feedcto</a>
                     </div>
                 </div>
                 <div class="trade-section">
