--- a/FEED/index.html
+++ b/FEED/index.html
@@ -854,57 +854,16 @@
             networkStatus.innerText = "Processing swap...";
             dogMessage.innerText = getRandomMessage("swapStart");
             try {
-                let bestOutput = web3.utils.toBN("0");
-                let routes;
-                const from = isFromBone ? wboneAddress : toToken.address;
-                const to = isFromBone ? toToken.address : wboneAddress;
-                for (const stable of [true, false]) {
-                    const pairAddress = await factory.methods.getPair(from, to, stable).call();
-                    if (pairAddress !== "0x0000000000000000000000000000000000000000") {
-                        const tempRoutes = [{ from, to, stable }];
-                        const amounts = await router.methods.getAmountsOut(amountInWei, tempRoutes).call();
-                        const output = web3.utils.toBN(amounts[amounts.length - 1]);
-                        if (output.gt(bestOutput)) {
-                            bestOutput = output;
-                            routes = tempRoutes;
-                        }
-                    }
-                }
-                if (bestOutput.eq(web3.utils.toBN("0"))) {
-                    networkStatus.innerText = "No valid trading pair found.";
-                    dogMessage.innerText = getRandomMessage("calcFail");
-                    tradeButton.classList.remove("loading");
-                    tradeButton.disabled = false;
-                    return;
-                }
-                const pairAddress = await factory.methods.getPair(from, to, routes[0].stable).call();
-                const pairContract = new web3.eth.Contract(pairAbi, pairAddress);
-                const reserves = await pairContract.methods.getReserves().call();
-                const token0 = await pairContract.methods.token0().call();
-                const reserveFrom = token0 === from ? reserves.reserve0 : reserves.reserve1;
-                const reserveTo = token0 === from ? reserves.reserve1 : reserves.reserve0;
-                const reserveFromBN = web3.utils.toBN(reserveFrom);
-                const reserveToBN = web3.utils.toBN(reserveTo);
-                const priceImpact = web3.utils.toBN(amountInWei).mul(web3.utils.toBN(100)).div(reserveFromBN.add(web3.utils.toBN(amountInWei)));
-                if (priceImpact.gt(web3.utils.toBN(maxPriceImpact * 100))) {
-                    networkStatus.innerText = `Price impact too high (${priceImpact.toString()}%)`;
-                    dogMessage.innerText = getRandomMessage("highPriceImpact");
-                    tradeButton.classList.remove("loading");
-                    tradeButton.disabled = false;
-                    return;
-                }
-                if (bestOutput.gt(reserveToBN)) {
-                    networkStatus.innerText = "Insufficient liquidity";
-                    dogMessage.innerText = getRandomMessage("insufficientLiquidity");
-                    tradeButton.classList.remove("loading");
-                    tradeButton.disabled = false;
-                    return;
-                }
+                const routes = [{ from: isFromBone ? wboneAddress : feedToken.address, to: isFromBone ? feedToken.address : wboneAddress, stable: false }];
+                const amounts = await router.methods.getAmountsOut(amountInWei, routes).call();
+                const amountOut = web3.utils.toBN(amounts[amounts.length - 1]);
                 const slippageFactor = web3.utils.toBN(1000 - defaultSlippage * 1000);
-                const amountOutMin = bestOutput.mul(slippageFactor).div(web3.utils.toBN(1000));
+                const amountOutMin = amountOut.mul(slippageFactor).div(web3.utils.toBN(1000));
+
                 if (!isFromBone) {
-                    await approveToken(fromToken.address, amountInWei);
+                    await approveToken(feedToken.address, amountInWei);
                 }
+
                 if (isFromBone) {
                     await router.methods.swapExactETHForTokensSupportingFeeOnTransferTokens(
                         amountOutMin.toString(),
@@ -921,6 +880,7 @@
                         deadline
                     ).send({ from: account });
                 }
+
                 networkStatus.innerText = "Swap successful!";
                 dogMessage.innerText = getRandomMessage("swapSuccess");
                 card.querySelector(".amount-input").value = "";
@@ -932,12 +892,6 @@
                 if (error.code === 4001) {
                     errorMessage = "User rejected transaction";
                     dogMessage.innerText = getRandomMessage("userDenied");
-                } else if (error.message.includes("INSUFFICIENT_OUTPUT_AMOUNT") || error.message.includes("EXCESSIVE_INPUT_AMOUNT")) {
-                    errorMessage = "Swap failed: Price impact or slippage too high";
-                    dogMessage.innerText = "Woof! Swap failed—too much price impact";
-                } else if (error.message.includes("INSUFFICIENT_LIQUIDITY")) {
-                    errorMessage = "Swap failed: Insufficient liquidity";
-                    dogMessage.innerText = getRandomMessage("insufficientLiquidity");
                 } else {
                     dogMessage.innerText = getRandomMessage("swapFail");
                 }
